--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,8 +39,8 @@
 
         <aside id="sidebar">
             <a href="{{ site.github.zip_url }}" class="button">
-              <small>Download</small>
-              .zip file
+              <!--small>Download</small-->
+              Home
             </a>
             <a href="{{ site.github.tar_url }}" class="button">
               <small>Download</small>
