--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,8 +43,8 @@
               Home
             </a>
             <a href="{{ site.github.tar_url }}" class="button">
-              <small>Download</small>
-              .tar.gz file
+              <!--small>Download</small-->
+              Research & Project
             </a>
 
           {% if site.github.is_project_page %}
