--- a/_sass/jekyll-theme-architect.scss
+++ b/_sass/jekyll-theme-architect.scss
@@ -117,7 +117,7 @@ aside a.button {
   padding-left: 64px;
   margin-bottom: 20px;
   font-size: 21px;
-  background: transparent url(../images/side-button.png) 0 0 no-repeat;
+  background: transparent url(../images/download-button.png) 0 0 no-repeat;
 }
 
 code, pre {
