--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,6 +46,12 @@
               <!--small>Download</small-->
               Research & Project
             </a>
+          
+          <table summary="Table for page layout." id="tlayout">
+            <tr valign="top">
+            <td id="layout-menu">
+            <div class="menu-category">About Me</div>
+            </td>
 
           {% if site.github.is_project_page %}
             <p class="repo-owner"><a href="{{ site.github.repository_url }}">{{ site.github.repository_name }}</a> is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a>.</p>
