--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,18 +40,13 @@
         <aside id="sidebar">
             <a href="{{ site.github.zip_url }}" class="button">
               <!--small>Download</small-->
-              Home
+              <big>Home</big>
             </a>
             <a href="{{ site.github.tar_url }}" class="button">
               <!--small>Download</small-->
               Research & Project
             </a>
           
-          <table summary="Table for page layout." id="tlayout">
-            <tr valign="top">
-            <td id="layout-menu">
-            <div class="menu-category">About Me</div>
-            </td>
 
           {% if site.github.is_project_page %}
             <p class="repo-owner"><a href="{{ site.github.repository_url }}">{{ site.github.repository_name }}</a> is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a>.</p>
