--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,12 +40,18 @@
         <aside id="sidebar">
             <a href="{{ site.github.zip_url }}" class="button">
               <!--small>Download</small-->
-              <big>Home</big>
+              Home
             </a>
             <a href="{{ site.github.tar_url }}" class="button">
               <!--small>Download</small-->
               Research & Project
             </a>
+          <table summary="Table for page layout." id="tlayout">
+            <tr valign="top">
+            <td id="layout-menu">
+            <div class="menu-category">About Me</div>
+            <div class="menu-item"><a href="index.html" class="current">Home</a></div>
+            </td>
           
 
           {% if site.github.is_project_page %}
