--- a/_sass/jekyll-theme-architect.scss
+++ b/_sass/jekyll-theme-architect.scss
@@ -95,7 +95,7 @@ a.button {
   width: 134px;
   height: 58px;
   padding-top: 22px;
-  padding-left: 10px;
+  padding-left: 68px;
   font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
   font-size: 23px;
   line-height: 1.2;
@@ -434,6 +434,7 @@ footer a:hover {
   }
   aside#sidebar a.button {
     display: none;
+    padding: 5px 0;
   }
   #main-content h1:before,
   #main-content h2:before,
