--- a/_sass/jekyll-theme-architect.scss
+++ b/_sass/jekyll-theme-architect.scss
@@ -434,7 +434,7 @@ footer a:hover {
   }
   aside#sidebar a.button {
     display: none;
-    padding: 5px 0;
+    padding-left: 5px;
   }
   #main-content h1:before,
   #main-content h2:before,
