--- a/_sass/jekyll-theme-architect.scss
+++ b/_sass/jekyll-theme-architect.scss
@@ -114,7 +114,7 @@ header a.button {
 aside a.button {
   display: block;
   width: 138px;
-  padding: auto;
+  padding: 0.5cm 2cm;
   margin-bottom: 10px;
   font-size: 21px;
   background: transparent url(../images/side-button.png) 0 0 no-repeat;
