--- a/_sass/jekyll-theme-architect.scss
+++ b/_sass/jekyll-theme-architect.scss
@@ -76,7 +76,7 @@ aside#sidebar {
   float: right;
   width: 200px;
   min-height: 504px;
-  padding-left: 60px;
+  padding-left: 20px;
   font-size: 12px;
   line-height: 1.3;
   background: transparent url(../images/sidebar-bg.jpg) 0 0 no-repeat;
@@ -115,9 +115,9 @@ aside a.button {
   display: block;
   width: 138px;
   padding-left: 64px;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   font-size: 21px;
-  background: transparent url(../images/side-button.png) 0 0 no-repeat;
+  background: transparent url(../images/download-button.png) 0 0 no-repeat;
 }
 
 code, pre {
