--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,7 @@
             </a>
             <a href="{{ site.github.tar_url }}" class="button">
               <!--small>Download</small-->
-              Research &amp Project
+              Research&Project
             </a>
           <table summary="Table for page layout." id="tlayout">
             <tr valign="top">
