--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,14 +38,12 @@
         </section>
 
         <aside id="sidebar">
-            <a href="{{ site.github.zip_url }}" class="button">
-              <!--small>Download</small-->
+            <!--a href="{{ site.github.zip_url }}" class="button">
               Home
             </a>
             <a href="{{ site.github.tar_url }}" class="button">
-              <!--small>Download</small-->
               Research&Project
-            </a>
+            </a-->
           <table summary="Table for page layout." id="tlayout">
             <tr valign="top">
             <td id="layout-menu">
