--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,11 +44,19 @@
             <a href="{{ site.github.tar_url }}" class="button">
               Research&Project
             </a-->
-          <table summary="Table for page layout." id="tlayout">
+            <table summary="Table for page layout." id="tlayout">
             <tr valign="top">
             <td id="layout-menu">
-            <div class="menu-category">About Me</div>
-            <div class="menu-item"><a href="index.html" class="current">Home</a></div>
+              <div class="menu-category">About Me</div>
+              <div class="menu-item"><a href="index.html" class="current">Home</a></div>
+              <div class="menu-category">Research</div>
+              <div class="menu-item"><a href="index.html" class="current">Projects</a></div>
+              <div class="menu-category">Study</div>
+              <div class="menu-item"><a href="index.html" class="current">Course Projects</a></div>
+              <div class="menu-item"><a href="index.html" class="current">Skillsets</a></div>
+              <div class="menu-category">Others</div>
+              <div class="menu-item"><a href="index.html" class="current">Essays</a></div>
+              <div class="menu-item"><a href="index.html" class="current">Photography</a></div>
             </td>
           
 
