--- a/_sass/jekyll-theme-architect.scss
+++ b/_sass/jekyll-theme-architect.scss
@@ -41,11 +41,13 @@ div.menu-category {
 	padding-top: 0.2em;
 	padding-bottom: 0.1em;
 	font-weight: bold;
+	font-size: 20px;
 }
 
 div.menu-item {
 	padding-left: 16px;
 	text-indent: -16px;
+	font-size: 20px;
 }
 
 body {
