--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,13 +50,13 @@
               <div class="menu-category">About Me</div>
               <div class="menu-item"><a href="index.html" class="current">Home</a></div>
               <div class="menu-category">Research</div>
-              <div class="menu-item"><a href="index.html" class="current">Projects</a></div>
+              <div class="menu-item"><a href="projects.html" class="current">Projects</a></div>
               <div class="menu-category">Study</div>
-              <div class="menu-item"><a href="index.html" class="current">Course Projects</a></div>
-              <div class="menu-item"><a href="index.html" class="current">Skillsets</a></div>
+              <div class="menu-item"><a href="course_projects.html" class="current">Course Projects</a></div>
+              <div class="menu-item"><a href="skillsets.html" class="current">Skillsets</a></div>
               <div class="menu-category">Others</div>
-              <div class="menu-item"><a href="index.html" class="current">Essays</a></div>
-              <div class="menu-item"><a href="index.html" class="current">Photography</a></div>
+              <div class="menu-item"><a href="essays.html" class="current">Essays</a></div>
+              <div class="menu-item"><a href="photography.html" class="current">Photography</a></div>
             </td>
           
           {% if site.github.is_project_page %}
