--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,9 +54,9 @@
               <div class="menu-category">Study</div>
               <div class="menu-item"><a href="course_projects.html" class="current">Course Projects</a></div>
               <div class="menu-item"><a href="skillsets.html" class="current">Skillsets</a></div>
-              <div class="menu-category">Others</div>
+              <!--div class="menu-category">Others</div>
               <div class="menu-item"><a href="essays.html" class="current">Essays</a></div>
-              <div class="menu-item"><a href="photography.html" class="current">Photography</a></div>
+              <div class="menu-item"><a href="photography.html" class="current">Photography</a></div-->
             </td>
           
           {% if site.github.is_project_page %}
